--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "node-red"
   ],
   "engines": {
-    "node": ">= 0.6.0",
-    "npm": ">= 1.0.0"
+    "node": ">= 10.0.0",
+    "npm": ">= 6.0.0"
   },
-
   "dependencies": {
     "express": "4.x",
-    "node-red": ">= 0.9",
+    "node-red": ">= 1.0",
     "atob": "1.1.2",
     "basic-auth-connect": "1.0.0"
   },
+  "scripts": {
+    "build": "true",
+    "start": "node server.js"
+  },
   "devDependencies": {},
   "bundleDependencies": [],
-
   "private": true,
   "main": "server.js"
 }
